# agentmonitor

./: .env.example  .gitignore  .gitleaks.toml  .npmignore  AGENTS.md  CONTRIBUTING.md  PLAN.md  PLAN_FEEDBACK_ANALYSIS.md  README.md  package.json  pnpm-lock.yaml
desktop-shell/: index.html
docs/: ARCHITECTURE.md  FEATURES.md  GIT_HISTORY_POLICY.md  (+4 more)
rust-backend/: AGENTS.md  Cargo.toml
rust-backend/src/: auto_import.rs  config.rs  importer.rs  lib.rs  main.rs  pricing.rs  runtime_contract.rs  runtime_host.rs  runtime_tasks.rs  state.rs
rust-backend/src/api/: events.rs  filter_options.rs  health.rs  mod.rs  otel.rs  provider_quotas.rs  sessions.rs  stats.rs  stream.rs  transcripts.rs
rust-backend/src/api/v2/: history.rs  insights.rs  live.rs  mod.rs
rust-backend/src/contracts/: event.rs  mod.rs  validation.rs
rust-backend/src/db/: mod.rs  queries.rs  schema.rs  v2_queries.rs
rust-backend/src/importer/: claude_history.rs  codex_history.rs
rust-backend/src/insights/: service.rs
rust-backend/src/otel/: parser.rs
rust-backend/src/sse/: hub.rs  live.rs  mod.rs
rust-backend/src/util/: mod.rs  truncate.rs
rust-backend/tests/: auto_import_scheduler.rs  config_compatibility.rs  cost_backfill.rs  desktop_invariants.rs  events_api.rs  import_pipeline.rs  otel_api.rs  queries_test.rs  runtime_host.rs  runtime_invariants.rs  runtime_tasks.rs  schema_compatibility.rs  sessions_api.rs  static_assets_api.rs  stats_advanced_api.rs  stats_stream_api.rs  v2_boot_api.rs  v2_history_api.rs  v2_insights_api.rs  v2_live_api.rs  v2_live_stream_api.rs  v2_queries.rs
(+413 files in other folders)
